Domains that don't have any databases but are allowed to create one can now install scripts that have the ability to create a database.
When re-creating a domain as part of a restore, the external DNS IP address is set to match the target system, rather than being copied from the source.
Added the CA Certificate tab to the Manage SSL Certificate page, for uploading a chained cert from your CA.
If the create of the Unix user or group for a virtual server fails, both are rolled back to avoid leaving half-created users in /etc/passwd or LDAP.
Virtualmin plugins and modules that are not installed but could be are now in the right-hand frame, with a link to the Package Updates module to install them.
Updated the proxy paths page to allow proxying paths to a single URL, even on systems that don't have mod_proxy_balancer installed. For those with a module, the proxy can still be to multiple URLs.
Changed default PHPlist version to stable release 2.10.5.
Added a field to the Upgrade Notification section of the Script Installers page to specify a custom base URL for Webmin for email messages.
On systems with the mod_proxy_balancer Apache module, Ruby-based script installers can run multiple Mongrel instances to handle higher loads. All needed proxy directives and server processes are setup automatically.
Cleaned up the reseller editing page by breaking down fields into collapsible sections.
The hosting provider's logo that appears in the top-left corner can now be customized on a per-reseller basis, so that customers of each reseller see a different logo when they login.
Added --logo and --link parameters to create-reseller.pl and modify-reseller.pl, to set the logo their customers see, and updated list-resellers.pl to show the current logo for each reseller.
Added an option to the proxy paths page to serve locally for some path (disable proxying). Also added a corresponding flag to the create-proxy.pl command-line API.